<resources>
    <string name="app_name">TooGoodToThrow</string>
    <string name="categories"><b>Catégories</b></string>
    <string name="fruits_and_vegetables">Fruits et légumes</string>
    <string name="milk_products">Produits laitiers</string>
    <string name="prepared_food">Plats cuisinés</string>
    <string name="starchy">Féculents</string>
    <string name="candy_and_sweet">Bonbons et sucreries</string>
    <string name="drinks">Boissons</string>
    <string name="meat_and_fish">Viandes et poissons</string>
    <string name="frozen">Surgelés</string>
    <string name="grocery">Epicerie</string>
    <string name="baby_feeding">Alimentation bébé</string>
    <string name="tea_coffee_chocolate">Thé, café, chocolat</string>
    <string name="validate_button">Valider</string>
    <string name="add_product_cgu">Conditions de TooGoodToThrow</string>
    <string name="add_product">Ajout d\'un produit</string>
    <string name="add_product_text_cgu">Le donateur s\'engage à fournir des produits de qualité dans le respect de la santé des utilisateurs.
        \n\nTooGoodToThrow ne peut être tenu responsable de la mauvaise qualité de la nourriture offerte.
        \n\nJe certifie :\n\nEtre majeur, \nNe pas être sous tutelle\nNe pas donner d\'alcool ni de produits stupéfiants</string>
    <string name="signup_tv">Je m\'inscris !</string>
    <string name="lastname_hint">name</string>
    <string name="firstname_hint">firstname</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="confirm_password_hint">comfirm password</string>
    <string name="address_hint">address</string>
    <string name="postal_code_hint">postal_code</string>
    <string name="city_hint">city</string>
    <string name="accepted_rules">J\'accepte les conditions d\'utilisation de TooGoodToThrow</string>
    <string name="title_rules_app_tv">Conditions TooGoodToThrow</string>
    <string name="text_rules_app">Dans la mesure ou l\'application est d\'ordre solidaire, la qualitée des produits ne peut être certifiée. Les utilisateurs doivent donc rester vigilents et ne pas prendre de risque de santé. En cas de doute sur la nourriture reçue, n\'acceptez pas le produit.
\n\nToGoodToThrow ne peut être tenu responsable de la mauvaise qualitée de la nourriture offerte.
\n\nJe certifie également être majeur et ne pas être sous tutelle, ne pas vendre d\'alcool ni de produits stupéfiants.

</string>
    <string name="title_application">TooGoodToThrow</string>
    <string name="create_account"><u>Je n\'ai pas de compte, en créer un</u></string>
    <string name="pwd_forgotten">J\'ai oublié mon mot de passe</string>
    <string name="email">Email</string>
    <string name="password">Entrez votre mot de passe</string>
    <string name="title_ad">J\'enregistre un produit</string>
    <string name="product_choice">Choix du produit</string>
    <string name="state_product">Etat du produit</string>
    <string name="expiry_more_one_week">Péremption + d\'une semaine</string>
    <string name="expiry_one_week">Se périme dans une semaine</string>
    <string name="expiry_few_days">Se  périme dans quelques jours</string>
    <string name="expiry_urgent">Urgent</string>
    <string name="expiry_date">Date de péremption</string>
    <string name="quantity">Quantité</string>
    <string name="pickup_date">Date de retarit</string>
    <string name="pickup_time">Heure de retrait</string>
    <string name="comment">Commentaires</string>
    <string name="title_activity_menu">TooGoodToThrow</string>
    <string name="nav_header_title">gr</string>
    <string name="nav_header_desc">er</string>
    <string name="nav_header_subtitle">e</string>
    <string name="action_settings">petiticfbfgn</string>

    <string-array name="fruits_and_vegetable_arr">
        <item>--Choix--</item>
        <item>Pomme</item>
        <item>Poireau</item>
    </string-array>

    <string-array name="milk_product">
        <item>--Choix--</item>
        <item>Fromage de brebis</item>
        <item>Yahourt 0%</item>
    </string-array>

    <string-array name="cooked_food">
        <item>--Choix--</item>
        <item>Chili</item>
        <item>Pates carbonara</item>
    </string-array>

    <string-array name="starchy">
        <item>--Choix--</item>
        <item>Riz</item>
        <item>Quinoa</item>
    </string-array>

    <string-array name="candy_and_sweet">
        <item>--Choix--</item>
        <item>Fraise tagada</item>
        <item>Pepito</item>
    </string-array>

    <string-array name="drink">
        <item>--Choix--</item>
        <item>Coca-cola</item>
        <item>Perrier</item>
    </string-array>

    <string-array name="frozen">
        <item>--Choix--</item>
        <item>Petits pois</item>
        <item>Mr Freeze</item>>
    </string-array>

    <string-array name="vop">
        <item>--Choix--</item>
        <item>Saumon</item>
        <item>Oeuf</item>
    </string-array>

    <string-array name="grocery">
        <item>--Choix--</item>
        <item>Safran</item>
        <item>Thym</item>
    </string-array>

    <string-array name="baby_food">
        <item>--Choix--</item>
        <item>Petit pot carotte</item>
        <item>Petit pot chou</item>
    </string-array>

    <string-array name="tea_coffee_chocolate">
        <item>--Choix--</item>
        <item>Nesquik</item>
        <item>Grand Arabica</item>
    </string-array>
</resources>
