<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".product.ProductActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title_ad_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_ad"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/product_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_choice"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/title_ad_tv"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            />

        <Spinner
            android:id="@+id/product_choice_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/product_name_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">
        </Spinner>

        <TextView
            android:id="@+id/category_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/product_choice_spinner"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            />
        <RadioGroup
            android:id="@+id/category_choice_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/category_name_tv">
            <RadioButton
                android:id="@+id/fruits_and_vegetables"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fruits_and_vegetables"/>
            <RadioButton
                android:id="@+id/milk_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milk_products"/>
            <RadioButton
                android:id="@+id/cooked_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prepared_food"/>
            <RadioButton
                android:id="@+id/starchy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starchy"/>
            <RadioButton
                android:id="@+id/candy_and_sweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/candy_and_sweet"/>
            <RadioButton
                android:id="@+id/drink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drinks"/>
            <RadioButton
                android:id="@+id/vop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meat_and_fish"/>
            <RadioButton
                android:id="@+id/frozen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frozen"/>
            <RadioButton
                android:id="@+id/grocery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grocery"/>
            <RadioButton
                android:id="@+id/baby_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baby_feeding"/>
            <RadioButton
                android:id="@+id/tea_coffee_chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tea_coffee_chocolate"/>
        </RadioGroup>


        <TextView
            android:id="@+id/state_product_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_product"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_choice_rg"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            />

        <RadioGroup
            android:id="@+id/state_choice_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_product_tv">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiry_more_one_week"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiry_one_week"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiry_few_days"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiry_urgent"/>
        </RadioGroup>

        <TextView
            android:id="@+id/expiry_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiry_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_choice_rg"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            />
        <EditText
            android:id="@+id/expiry_date_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/expiry_date_tv"
            android:hint="Date"
            android:focusable="false"
            android:imeOptions="actionNext"
            android:maxLength="30"
            />

        <TextView
            android:id="@+id/quantity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expiry_date_edt"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            />
        <EditText
            android:id="@+id/quantity_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/quantity_tv"

            />


        <TextView
            android:id="@+id/pickup_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantity_edt"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            />
        <EditText
            android:id="@+id/pickup_date_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pickup_date_tv"
            android:hint="Date"
            android:focusable="false"
            android:imeOptions="actionNext"
            android:maxLength="30"
            />

        <TextView
            android:id="@+id/pickup_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pickup_date_edt"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            />
        <EditText
            android:id="@+id/pickup_time_start_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pickup_time_tv"
            android:hint="heure de depart"
            android:focusable="false"
            android:imeOptions="actionNext"
            android:maxLength="30"
            />
        <EditText
            android:id="@+id/pickup_time_end_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pickup_time_start_edt"
            android:hint="heure de fin"
            android:focusable="false"
            android:imeOptions="actionNext"
            android:maxLength="30"
            />

        <TextView
            android:id="@+id/comment_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pickup_time_end_edt"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            />

        <EditText
            android:id="@+id/comment_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/comment_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <CheckBox
            android:id="@+id/rules_product_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accepted_rules"
            app:layout_constraintTop_toBottomOf="@id/comment_edt"
            android:layout_marginTop="40dp"
            />

        <Button
            android:id="@+id/valide_product_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rules_product_cb"
            android:text="@string/validate_button"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>