<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignupActivity">

    <TextView
        android:id="@+id/signup_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_tv"
        android:textSize="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/signup_lastname_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_title_tv"
        android:hint="@string/lastname_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"

        />

    <EditText
        android:id="@+id/signup_firstname_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_lastname_et"
        android:hint="@string/firstname_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"

        />

    <EditText
        android:id="@+id/signup_email_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_firstname_et"
        android:hint="@string/email_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"

        />

    <EditText
        android:id="@+id/signup_password_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_email_et"
        android:hint="@string/password_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"

        />

    <EditText
        android:id="@+id/signup_confirm_password_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_password_et"
        android:hint="@string/confirm_password_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"

        />

    <EditText
        android:id="@+id/signup_address_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_confirm_password_et"
        android:hint="@string/address_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"

        />

    <EditText
        android:id="@+id/signup_postal_code_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_address_et"
        android:hint="@string/postal_code_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"

        />
    <EditText
        android:id="@+id/signup_city_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_postal_code_et"
        android:hint="@string/city_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"

        />

    <CheckBox
        android:id="@+id/accpted_rules_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accepted_rules"
        app:layout_constraintTop_toBottomOf="@id/signup_city_et"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>


    <Button
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate_button"
        app:layout_constraintTop_toBottomOf="@id/accpted_rules_cb"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"/>
        />
</android.support.constraint.ConstraintLayout>