<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/txtViex"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/title_application"
        android:layout_marginStart="80sp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:text="jdeyehe@gmail.com"
            android:layout_marginTop="110sp"
            android:layout_marginBottom="50sp" />

        <EditText
            android:id="@+id/pwd_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:text="toto"
            android:layout_marginBottom="70sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="text"
            android:text="@string/validate_button"
            android:layout_marginBottom="50sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/create_account"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/pwd_forgotten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwd_forgotten"
            android:textSize="17dp"
            android:layout_marginTop="7dp"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>